<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation support for mycobot robots including worlds and launch files</description>
  <maintainer email="ti.alex.02@gmail.com">ubuntu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend> # supervisor for ros2_control
  <depend>gripper_controllers</depend> # ready to use controllers for open and close gripper
  <depend>gz_msgs_vendor</depend> # gazebo message definitions
  <depend>gz_ros2_control</depend> # bridge between ros2_control and gazebo
  <depend>python3-numpy</depend> # for math operations
  <depend>rclcpp</depend> # ros2 client library for c++
  <depend>ros_gz</depend> # connect ros2 with the latest version of gazebo
  <depend>ros_gz_bridge</depend> # bridge between ros2 and gazebo, so they can talk to each other
  <depend>ros_gz_image</depend> # bridge for images between ros2 and gazebo
  <depend>ros_gz_sim</depend> # ros2 interface for gazebo, so we can control gazebo from ros2
  <depend>ros2_control</depend> # ros2 framework for controlling robots
  <depend>ros2_controllers</depend> # ready to use controllers for ros2_control
  <depend>trajectory_msgs</depend> # for sending trajectory commands to the robot
  <depend>xacro</depend> # for creating robot models
  <exec_depend>gz_ros2_control_demos</exec_depend> # ready to use gazebo worlds and launch files for ros2_control
ß
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
